[package]
name = "centrifugo-change-stream"
version = "4.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap-verbosity-flag = "2.0.1"
futures-util = "0.3.28"
mongodb = "2.7.0"
serde = { version = "1.0.189", features = [ "derive" ] }
serde_json = "1.0.107"
signal-hook = { version = "0.3.17", default-features = false }
signal-hook-tokio = { version = "0.3.1", features = [ "futures-v0_3" ] }
tokio-util = "0.7.9"
tracing = "0.1.40"
url = "2.4.1"

[dependencies.axum]
version = "0.6.20"
default-features = false
features = [ "http1", "json", "tokio" ]

[dependencies.clap]
version = "4.4.6"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.reqwest]
version = "0.12.0"
default-features = false
features = [ "json" ]

[dependencies.tokio]
version = "1.33.0"
features = [ "macros", "rt-multi-thread", "sync" ]

[dependencies.tracing-log]
version = "0.1.3"
default-features = false
features = [ "std", "log-tracer" ]

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]

[dev-dependencies]
hyper = { version = "0.14.27", default-features = false }
mockito = "1.2.0"
tower = { version = "0.4.13", default-features = false }
