[package]
name = "centrifugo-change-stream"
version = "4.0.19"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap-verbosity-flag = { version = "3.0", features = [ "tracing" ] }
futures-util = "0.3"
mongodb = "3.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
signal-hook = { version = "0.3", default-features = false }
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio-util = "0.7"
tracing = "0.1"
url = "2.4"

[dependencies.axum]
version = "0.8"
default-features = false
features = [ "http1", "json", "tokio" ]

[dependencies.clap]
version = "4.4"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "json" ]

[dependencies.tokio]
version = "1.33"
features = [ "macros", "rt-multi-thread", "sync" ]

[dependencies.tracing-log]
version = "0.2"
default-features = false
features = [ "std", "log-tracer" ]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]

[dev-dependencies]
mockito = "1.2"
tower = { version = "0.5", default-features = false, features = [ "util" ] }
